--- a/index.html
+++ b/index.html
@@ -1,19 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NORKORBLOG</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Favicon/logo -->
-    <link rel="icon" type="image/png" href="/image/logo.png" />
+    <link rel="icon" type="image/png" href="/images/logo.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/image/logo-16.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/image/logo-32.png" />
     <link rel="icon" type="image/png" sizes="48x48" href="/image/logo-48.png" />
     <link rel="icon" type="image/png" sizes="64x64" href="/image/logo-64.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/image/logo-192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/image/logo-512.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/image/logo-192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="/image/logo-512.png"
+    />
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta
+      property="og:title"
+      content="NORKORBLOG - Education and Technology Blog"
+    />
+    <meta
+      property="og:description"
+      content="Share your knowledge and experiences in education and technology. Learn from others, inspire change."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/image/logo-512.png" />
   </head>
   <body>
     <!-- React mounts here -->
