i have update icon of url

--- a/index.html
+++ b/index.html
@@ -4,42 +4,70 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NORKORBLOG</title>
+
+    <!-- Google Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
 
-    <!-- Favicon/logo -->
-    <link rel="icon" type="image/png" href="/images/logo.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/image/logo-16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/image/logo-32.png" />
-    <link rel="icon" type="image/png" sizes="48x48" href="/image/logo-48.png" />
-    <link rel="icon" type="image/png" sizes="64x64" href="/image/logo-64.png" />
+    <!-- ====================== -->
+    <!-- ✅ Favicon / App Icons -->
+    <!-- ====================== -->
+    <link rel="icon" type="image/png" href="./logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./logo-16.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./image/logo-32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="48x48"
+      href="./image/logo-48.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="64x64"
+      href="./image/logo-64.png"
+    />
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="/image/logo-192.png"
+      href="./image/logo-192.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="512x512"
-      href="/image/logo-512.png"
+      href="./image/logo-512.png"
     />
 
-    <!-- Open Graph Meta Tags for Social Media -->
+    <!-- ====================== -->
+    <!-- ✅ Open Graph / SEO -->
+    <!-- ====================== -->
     <meta
       property="og:title"
-      content="NORKORBLOG - Education and Technology Blog"
+      content="NORKORBLOG - Education & Technology Blog"
     />
     <meta
       property="og:description"
       content="Share your knowledge and experiences in education and technology. Learn from others, inspire change."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/image/logo-512.png" />
+
+    <!-- For Open Graph image, use relative or absolute path -->
+    <meta property="og:image" content="./image/logo-512.png" />
+    <meta property="og:url" content="https://norkorblog.vercel.app" />
+
+    <!-- Fallback favicon for older browsers -->
+    <link rel="shortcut icon" href="./logo.png" type="image/png" />
   </head>
+
   <body>
     <!-- React mounts here -->
     <div id="root"></div>
